frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  annotations:
    cloud.google.com/backend-config: '{"default": "front"}'
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: front
  type: NodePort
